@@ -101,3 +101,5 @@
 2016-01-28 Fred Gleason <fredg@paravelsystems.com>
 	* Removed support for '--server-type=' option in
 	'src/glassplayer/glassplayer.cpp'.
+2016-01-28 Fred Gleason <fredg@paravelsystems.com>
+	* Added support for handling M3U stream URLs.
